css/style.css
/* ... */
@media only screen and (min-width: 780px) {
  #gallery {
    width: 85vw;
  }
}
@media only screen and (min-width: 800px) {
  .main {
    padding: 20px 0px 35px 0px !important;
    height: 1500px !important;
  }
  #social-media {
    display:inline-block;
    margin-top: 20px;
  }
  .accent-text {
    font-weight: 400 !important;
  }
  #intro-text, .about-text {
    font-size: 1.1em;
    padding-right: 35px !important;
  }
  .particletext {
    padding-left: 5px;
  }
}
@media only screen and (min-width: 918px) {
  .main {
    padding: 1.5em 0em 3em 0em !important;
    height: 1350px !important;
  }
  #gallery {
    justify-content: space-around;
  }
}
@media only screen and (min-width: 1024px) {
  .main {
    padding: 1.5em 0em 4em 0em !important;
  }
  #intro-text, .about-text {
    line-height: 1.8em !important;
    font-size: 1.15em;
  }
  .dynamo div {
    line-height: 1.05em;
  }
  #cocanvas-modal, #origame-modal, #tictac-modal, #burning-modal, #ph-modal {
    background: #fff;
    max-width: 600px !important;
    padding: 40px !important;
  }
  #mockup {
    display: block;
    margin: 0 auto !important;
    margin-left: 140px !important;
    margin-top: 11px !important;
  }
  #slider {
    width: 240px !important;
    margin-left: 129px !important;
    height: 140px;
    margin-top: 24px !important;
    overflow: hidden !important;
  }
  #cocanvas-modal ul, #origame-modal ul, #tictac-modal ul, #burning-modal ul, #ph-modal ul {
    padding-left: 50px;
    line-height: 1.5em;
    font-size: 0.95em;
    color: #333;
    margin-top: 10px;
  }
  #info-heading {
    font-size: 1.2em;
  }
  .modal-text {
    font-size: 1em;
  }
  h3 {
    font-size: 1.1em;
    padding-bottom: 10px;
  }
}
@media only screen and (min-width: 1224px) {
  .main {
    padding: 1.5em 0em 5em 0em !important;
  }
  #gallery {
    width: 75vw;
  }
}
@media only screen and (min-width: 1251px) {
 #about-heading-container, #projects-heading-container {
    margin-top: 25px;
  }

}
@media only screen and (min-width: 1387px) {
  .main {
    padding: 1.5em 0em 5.5em 0em;
  }
  #gallery {
    width: 70vw;
  }
}
@media only screen and (min-width: 1600px) {
  .main {
    padding: 1.5em 7em 7em 7em;
  }
  #gallery {
    width: 60vw;
  }
}
@media only screen and (min-width: 1920px) {
  .main {
    padding: 1.5em 9em 9em 9em;
    height: 1500px !important;
  }
  #gallery {
    width: 85vw;
  }
}

